<package format="3">
  <name>ros2_sim_control</name>
  <version>0.0.1</version>
  <description>ROS 2 package for controlling a robot with a PID controller</description>
  <maintainer email="peto.adam@yahoo.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <build_depend>ament_lint_auto</build_depend>
  <build_depend>ament_lint_common</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
